styling/nb.css
:root {
  /* I wanted to use solarized colors, but they are not easy to tell mentally.
   * Found this instead, and just tweaked a bit the grey: https://sashamaps.net/docs/resources/20-colors/
   */
  --color1: #ffe119;
  --color2: #4363f8;
  --color3: #f58231;
  --color4: #fcbeff;
  --color5: #800000;
  --color6: #009055;
  --color7: #604530;
  --color8: #696969;
  --color9: #ffffff;
  --sd-red: #dc322f;
  --score: #800000;
  --score-glow: #f00000;
  --score-glow-2: #f06000;
  --score-glow-3: #f0f000;
  --sd-green: #859900;
  --dark: #2b3b4b;
  --light: #ada693;
  --light-2: #8d8673;
  --background: var(--light-2);
  --alternate-background: var(--light);
  --textcolor: black;
  font-size: calc(1rem + 0.25vw);
}

* {
  margin: 0;
  padding: 0;
  box-shadow: none;
  border: none;
  background-color: transparent;
}

html,
body {
  background-color: var(--background);
  height: 100%;
  overflow: hidden;
  touch-action: none;
}

#wrapper {
  height: 100%;
}

#modal {
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
}

#modal-content {
  font-family: "Inter";
  font-size: 2em;
  color: var(--textcolor);
  background-color: var(--background);
  margin: 30% auto;
  padding: 20px;
  border: 2px solid var(--dark);
  border-radius: 0.2em;
  width: 50%;
  min-height: 30vh; /* At least 30% of viewport height */
}

#score {
  font-family: "bpdots";
  color: var(--score);
  text-shadow:
    0 0 5px var(--score-glow),
    /* main glow */ 0 0 10px var(--score-glow-2),
    /* second glow */ 0 0 15px var(--score-glow-3); /* third glow */
  position: absolute;
  font-size: round(nearest, 4rem, 2px);
  bottom: round(nearest, 2em, 2px);
  left: round(nearest, 50%, 2px);
  transform: translate(round(nearest, -50%, 2px), round(nearest, -50%, 2px));
  width: round(nearest, 50%, 2px);
  height: 0;
}

#levelling {
  margin-top: 1em;
}

@media (orientation: landscape) {
  #score {
    font-size: 2rem;
    bottom: 0px;
  }
}

#letter {
  font-family: "Inter";
  font-size: 3em;
  text-align: center;
  position: fixed;
  width: round(nearest, 1em, 2px);
  height: round(nearest, 1em, 2px);
  line-height: round(nearest, 1em, 2px);
  z-index: 11; /* Just above timer */
  /* This is to prevent a subtle border on iPhone, some compositing issue. The problem does not appear consistently though. */
  background-color: var(--light-2);
  border: none;
}

#circular-progress {
  position: fixed;
  width: round(nearest, 6em, 2px);
  height: round(nearest, 6em, 2px);
}

.background-circle {
  fill: var(--background);
  stroke: var(--background);
  stroke-width: 10;
}

.progress-circle {
  fill: none;
  stroke: none;
  stroke-width: 10;
  stroke-dasharray: calc(251); /* Circumference */
  stroke-dashoffset: calc(251); /* Initially hidden */
  transform-origin: center; /* Rotate from center */
  transition: stroke-dashoffset 0.1s linear; /* Smooth transition */
  transform: rotate(-90deg);
}

.matrix {
  display: grid;
  grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
  grid-template-rows: repeat(3, 1fr); /* 3 equal rows */
  max-width: 1024px;
  width: calc(100% - 4em); /* leave guaranteed space for the side buttons */
  margin: 0 auto;
}

.inner-square {
  background-color: var(--alternate-background);
  border-radius: 1.5em;
  margin: 0.5em;
  aspect-ratio: 1/1; /* Maintain square aspect ratio */
  border: round(nearest, 3em, 2px) solid;
  border-color: var(--alternate-background);
  transition:
    border-color 0.5s ease-in-out,
    background-color 0.5s ease-in-out;
}

.inner {
  background-color: var(--background);
  border-radius: round(nearest, 1.25em, 2px);
  border: 1em var(--background) solid;
  aspect-ratio: 1/1;
  transition: border-color 0.5s ease-in-out;
}

.front {
  z-index: 10; /* Ensure buttons are on top */
  opacity: 1;
}

.back {
  display: none;
  opacity: 0; /* Having this opacity is still not fixing the ghosting, but seems to help a lot */
  z-index: -1 !important; /* Ensure buttons are on back */
}

#top-section {
  width: 100%;
  min-height: 1em;
  font-size: 4rem;
  color: var(--textcolor);
  font-family: "Inter";
  padding-top: 1em;
  padding-bottom: 0.5em;
  z-index: 100;
  display: flex;
}

#top-button {
  text-align: center;
  margin: auto;
}

#top-button > sub {
  font-size: 50%;
}

#top-round {
  position: fixed;
  left: 0;
  margin-left: 4em;
  font-size: 90%;
  font-size: 50%;
  top: 3em;
}

#top-pct {
  position: fixed;
  right: 0;
  margin-right: round(nearest, 3em, 2px);
  font-size: 50%;
  top: round(nearest, 2.5em, 2px);
  table-layout: fixed; /* Key property for equal width */
  width: auto;
  /* The next two are to prevent a subtle but annoying border on iOS Safari */
  background-color: var(--light-2);
  border: none;
  /*border: 1px solid rgba(0, 0, 0, 0);*/
}

#top-pct td {
  width: round(nearest, 2em, 2px);
  overflow: hidden;
}

#left-button,
#middle-button,
#bottom-button,
#right-button {
  position: fixed; /* Position over the content */
  top: 0;
  bottom: 0;
  cursor: pointer; /* Indicate clickability */
  font-family: "Inter";
}

#left-button,
#right-button {
  width: round(nearest, 30%, 2px); /* Make the answers larger */
  border: none;
}

#middle-button {
  left: round(nearest, 30%, 2px);
  width: round(nearest, 40%, 2px);
  height: round(nearest, 50%, 2px);
}

.transparent-b {
  background-color: rgba(0, 0, 0, 0);
  border: none;
}

#left-button {
  left: 0;
  color: var(--textcolor);
  writing-mode: vertical-lr;
  text-orientation: upright;
}

#left-button > div {
  padding-top: -2em;
  width: 100%;
  text-align: center;
}

#right-button {
  right: 0;
  color: var(--textcolor);
  writing-mode: vertical-rl;
  text-orientation: upright;
}

#right-button > div {
  padding-top: -2em;
  width: 100%;
  text-align: center;
}

#bottom-button {
  color: var(--textcolor);
  left: round(nearest, 30%, 2px);
  width: round(nearest, 40%, 2px);
  top: round(nearest, 50%, 2px);
  display: flex;
  align-items: center;
  justify-content: center;
}
#bottom-button > div {
  width: 100%;
  text-align: center;
}

#bottom-button > div > p {
  padding: 1em;
  border-radius: 0.5em;
  letter-spacing: 0.15rem;
}

/* For now unused */
.button-transition {
  transition: background-color 1s ease-out !important;
}

